clusters/talos-robbinsdale/apps/rook-ceph/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: rook-ceph
  labels:
    pod-security.kubernetes.io/enforce: privileged
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
