clusters/talos-robbinsdale/apps/rook-ceph/s3manager.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3manager
  labels:
    app: s3manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s3manager
  template:
    metadata:
      labels:
        app: s3manager
    spec:
      containers:
        - name: s3manager
          image: cloudlena/s3manager:latest 
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: s3manager
  namespace: rook-ceph 
  labels:
    app: s3manager
spec:
  selector:
    app: s3manager
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bktui
  namespace: rook-ceph
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: envoy-gateway-system
  hostnames:
    - "bktui.rook.rajsingh.info"
    - "bktui.rook.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: s3manager
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
